<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_homef"
            android:title="@string/menu_home_btn" />
        <item
            android:id="@+id/nav_my_profile"
            android:icon="@drawable/ic_profilef"
            android:title="@string/menu_myprofile_btn" />
        <item
            android:id="@+id/nav_gov_not"
            android:icon="@drawable/ic_notif"
            android:title="@string/menu_publicnotif_btn" />
        <item
            android:id="@+id/nav_buy"
            android:icon="@drawable/ic_buyf"
            android:title="@string/menu_buyres_btn" />
        <item
            android:id="@+id/nav_sell"
            android:icon="@drawable/ic_sellf"
            android:title="@string/menu_sellres_btn" />
        <item
            android:id="@+id/nav_market_insight"
            android:icon="@drawable/ic_menu_market"
            android:title="@string/menu_marketinsight_btn" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logoutf"
            android:title="@string/menu_logout_btn" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exitf"
            android:title="@string/menu_exit_btn" />

    </group>

</menu>
