<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:id="@+id/content_home"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="iitp.naman.kisaanconnect.Home"
    tools:showIn="@layout/app_bar_home">
<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#eeeeee"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    >

<ImageView
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:src="@drawable/farmer"
    android:scaleType="centerCrop"
    android:contentDescription="@string/app_name"

    />
<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content_home_1"

        android:textStyle="bold"
        android:background="@drawable/endbutton"
        android:textColor="#fff"
        android:gravity="center"
        android:padding="5dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:layout_marginTop="10dp"
        android:padding="8dp"
        android:textSize="15sp"
        android:background="#fff"
        android:text="@string/content_home_2"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content_home_3"

        android:textStyle="bold"
        android:background="@drawable/iminterested"
        android:textColor="#fff"
        android:gravity="center"
        android:padding="5dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:layout_marginTop="10dp"
        android:padding="8dp"
        android:textSize="15sp"
        android:background="#fff"
        android:text="@string/content_home_4"
        />
</LinearLayout>
</ScrollView>