<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:fontFamily="sans-serif-condensed"
        >
        <android.support.v7.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ActionBarThemeOverlay"
            app:popupTheme="@style/ActionBarPopupThemeOverlay"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/my_toolbar"
            android:id="@+id/logobox"
            android:background="#49b102"
            android:padding="15dp"
            android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:contentDescription="@string/image_text"
                android:layout_height="wrap_content"
                android:src="@drawable/messagef"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:layout_below="@+id/iconbox"
            android:id="@+id/highlighticon"
            android:weightSum="2">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="5dp"
                android:background="#49b102"
                android:layout_weight="1"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="5dp"
                android:background="#49b102"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0.75dp"
            android:background="#49b102"
            android:layout_below="@id/highlighticon"
            android:orientation="horizontal"
            android:id="@+id/h1"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/otp_1"
            android:textColor="#0786b1"
            android:gravity="center"
            android:layout_below="@+id/h1"
            android:id="@+id/signupPage"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/infotextviewborder"
            android:padding="7dp"
            android:layout_marginLeft="13dp"
            android:layout_marginStart="13dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/otp_2"
            android:textColorHint="#9e9e9e"
            android:gravity="center"
            android:ems="10"
            android:id="@+id/otp"
            android:layout_below="@+id/signupPage"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/formfieldrectangle"
            android:padding="10dp"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:textColor="#49b102"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/otp"
            android:weightSum="2"
            android:layout_marginTop="20dp"
            android:id="@+id/navbuttons">
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/otp_3"
                android:textStyle="bold"
                android:background="#49b102"
                android:textColor="#fff"
                android:layout_weight="2"
                android:id="@+id/verify"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@+id/navbuttons"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp">
            <Button
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/otp_4"
                android:textStyle="bold"
                android:textColor="#49b102"
                android:background="#ffffff"
                android:id="@+id/resend" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:background="#49b102"
            android:gravity="center"
            android:id="@+id/iconbox"
            android:layout_below="@+id/logobox"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/otp_5"
                android:textColor="#fff"
                android:id="@+id/textView"/>

        </LinearLayout>


    </RelativeLayout>
</ScrollView>